# ai-projects

./: .dockerignore  .gitignore  README  README.md  package.json  pnpm-lock.yaml
apps/api/: package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: auth.py
apps/api/app/core/: config.py
apps/api/app/dependencies/: auth.py  current_user.py  repositories.py
apps/api/app/repositories/: user_repository.py
apps/api/app/schemas/: auth.py
apps/api/app/services/: auth_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 522aa84d25d5_create_users_table.py
apps/api/scripts/: seed_admin.py
apps/web/: next.config.ts
apps/web/app/: page.tsx
infrastructure/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infrastructure/docker/api/: Dockerfile.dev  Dockerfile.prod
infrastructure/docker/web/: Dockerfile.dev  Dockerfile.prod
