[project]
name = "api"
version = "0.1.0"

dependencies = [
    "fastapi",
    "uvicorn",
    "alembic",
    "database",
    "auth",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
]

[tool.uv.sources]
database = { path = "../../packages/database", editable = true }
auth = { path = "../../packages/auth", editable = true }
